# quantum-transformer

./: .gitignore  DEVELOPER_GUIDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/quantum_transformer/: __init__.py  config.py  generation_config.py  layers.py  model.py  tokenizer.py
