[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-transformer"
version = "0.1.0"
authors = [
  { name="Quantum AI Team", email="reach.harishapc@gmail.com" },
]
description = "A High-Fidelity Quantum-Inspired Transformer for Language Modeling"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "huggingface_hub>=0.19.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/quantum-transformer"
"Bug Tracker" = "https://github.com/yourusername/quantum-transformer/issues"

[tool.setuptools.packages.find]
where = ["src"]
